2007-07-13  Frederic Crozat  <fcrozat@mandriva.com>

	* gnome-theme-info.c: (look_for_cursor_theme):
	Fix crash when no cursor is specified in theme (fixes bug #455952).

2007-07-08  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.h: include gdk-pixbuf.h (fixes bug #454634)

2007-07-05  Denis Washington  <denisw@svn.gnome.org>

	* gnome-theme-info.[ch]:
	Add support for cursor themes (GnomeThemeCursorInfo); probably still a bit
	rough around the edges, but it works.

2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (peditor_string_value_changed),
	(peditor_color_value_changed): add safeguards for NULL values (closes
	bug #441036)

2007-06-29  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (peditor_string_value_changed): compare the
	string from the widget against the converted gconf value, not the
	unmodified one

2007-06-26  Michael Terry  <mike@mterry.name>

	* capplet-util.c, Makefile.am: Drastically simplify capplet_set_icon()
	to only look in the icon theme. Part of bug #450777.

2007-06-25  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.[ch]:
	Generate all types of thumbnails in a seperate process, not just those for
	metathemes.

2007-06-22  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.c: (create_image):
	Make metatheme thumbnails original-sized and add check box + radio button.

2007-06-20  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_icon_info_find,
	gnome_theme_is_writable):
	* gnome-theme-info.h: fix function signatures

2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: remove obsolete files

2007-06-12  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_icon_info_free): plug leak
	* theme-thumbnail.c: (message_from_child): fix comment

2007-06-09  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.c: (generate_gtk_theme_thumbnail):
	Stop the GdkDisplay mess and let gnome-appearance-properties handle