@@ -1,3 +1,10 @@
+2007-07-13  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-info.c: (gdk_pixbuf_from_xcursor_image),
+	(look_for_cursor_theme), (add_common_icon_theme_dir_monitor),
+	(gnome_theme_cursor_info_new): general cleanup and leak-plugging
+	* gnome-theme-test.c: (main): add cursor theme info
+
 2007-07-13  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* gnome-theme-info.c: (look_for_cursor_theme):
